Jekyll-ified dorkbot website \o/

--- a/index.html
+++ b/index.html
@@ -1,80 +1,6 @@
-<html>
-<body>
-<pre>
-         _               _     _             _    _                    _               
-        | |             | |   | |           | |  | |                  | |              
-      __| |  ___   _ __ | | __| |__    ___  | |_ | |  ___   _ __    __| |  ___   _ __  
-     / _` | / _ \ | '__|| |/ /| '_ \  / _ \ | __|| | / _ \ | '_ \  / _` | / _ \ | '_ \ 
-    | (_| || (_) || |   |   < | |_) || (_) || |_ | || (_) || | | || (_| || (_) || | | |
-     \__,_| \___/ |_|   |_|\_\|_.__/  \___/  \__||_| \___/ |_| |_| \__,_| \___/ |_| |_| #87
-                                                                                       
-
-    When: 19:00-22:30, Thu Feb 19th 2015
-    Where: The Boxing Club, Limehouse town hall,
-    <a href="http://maps.google.co.uk/maps?q=6%20Charlwood%20St,%20Pimlico,%20London%20SW1V%202EE">646 Commercial Road, E14 7HA</a>
-    (directions below)
-
-    Free entry, no registration required
-
-    ==== Tim Hunkin - <a href="http://timhunkin.co.uk">timhunkin.co.uk<a/> =====
-
-    Tim Hunkin is an English engineer, cartoonist, writer, and artist. He
-    created the Channel Four TV series and Science Museum gallery The
-    Secret Life of Machines, which explained the workings and history of
-    various household devices. He has just launched a "new London arcade
-    of home-made coin operated machines built by enthusiasts":
-    <a href="http://www.novelty-automation.com">www.novelty-automation.com</a>
-    twitter: <a href="http://twitter.com/novautomation">@NovAutomation<a/>
-
-
-    ==== James Auger - <a href="http://auger-loizeau.com">auger-loizeau.com<a/> ====
-
-    James Auger is a designer, researcher and lecturer whose work examines
-    the social, cultural and human impact of technology and the products
-    that exist as a result of its development and application. His PhD
-    topic is Why Robot? Speculative design, the domestication of
-    technology and the considered future. James is also a partner in the
-    Speculative Design practice Auger-Loizeau, whose projects have been
-    published and exhibited internationally, including MoMA, New York;
-    21_21, Tokyo; The Science Museum, London and the Ars Electronica
-    festival, Linz, and are part of the permanent collection at MoMA.
-
-    ==== Pollie Barden - <a href="http://fireflygame.com">fireflygame.com<a/> ====
-
-    Pollie is an artist, activist and game designer who has designed games
-    from the mobile platform to the urban landscape. Firefly is a tagging
-    game that explores temporal memory, and exploits the balance of
-    collaboration and competition. The action takes place at night. Your
-    first strategic move is the clothing you wear. Players, wearing
-    Flashing LED badges will compete to see who can steal the most badges
-    from other players. However, the prize you seek may be your downfall!
-
-    ==== Restart Project - <a href="http://therestartproject.org">therestartproject.org<a/> ====
-
-    The Restart Project is a London-based social enterprise that
-    encourages and empowers people to use their electronics longer, by
-    sharing repair and maintenance skills. Through community and workplace
-    events we create engaging opportunities to extend the lifespan of
-    electronics and electrical equipment.
-    twitter: <a href="http://twitter.com/restartproject">@RestartProject</a>
-
-
-    ==== How to get to Limehouse Town Hall: ====
-
-    == By Tube:
-    Limehouse DLR from Bank or Tower Gateway
-
-    == By Bus:
-    15 from Trafalgar Sq / 115 from Aldgate /
-    D6 from Hackney / D3 from Bethnal Green
-
-    Get onto Commercial Road and travel East from Aldgate or Whitechapel.
-    Stay on Commercial Road, passing Limehouse DLR on your right (and
-    going under a railway bridge) and you'll see a modern red brick church
-    also on the right, then a boarded up library. Just over the canal you'll
-    see the TownHall, with the Limehouse Hawksmoor church behind it. At this
-    point you should get off the bus/bicycle and come ring on the "Boxing Club"
-    bell (The top of the 4 main buttons).
-</pre>
-</body>
-</html>
+---
+layout: default
+---
+{% assign post = site.posts.first %}
+{% assign content = post.content %}
+{% include post.html %}
