Fix github's config

--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: What's dorkbotlondon?
+title: About Dorkbotlondon
+permalink: /about/
 ---
-<section>
-
+{% include header.html %}
 <pre>
 First there was <a href="http://dorkbot.org/dorkbotnyc/">dorkbotnyc</a>, a monthly meeting of electronic artists in new york:
 </pre>
@@ -31,4 +31,3 @@ subscribe to both.
 * We have an <a href="/feeds/icalendar">iCal feed of all Dorkbot London events</a>.
 * And here's a handy button to add it to your Google calendar: <a href="https://www.google.com/calendar/render?cid=vqc1cb7ikjq6k83t2drmle9rnh2dagbh%40import.calendar.google.com"><img src="https://www.google.com/calendar/images/calendar_plus_en_GB.gif"></a>
 </pre>
-</section>
