--- a/archive.html
+++ b/archive.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Archive
+permalink: /archive/
 ---
 <blockquote><b>We're still slowly importing all the old dorkbotlondon events, this will be complete soon!</b></blockquote>
 
