--- a/speakers.html
+++ b/speakers.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Dorkbot Speakers
+permalink: /speakers/
 ---
 <blockquote><b>We're still slowly importing all the old dorkbotlondon events, this will be complete soon!</b></blockquote>
 
