Fix ical warning and url (which redirects)

--- a/about.html
+++ b/about.html
@@ -27,6 +27,6 @@ which is open for discussion. They both get the announcements so no need to
 subscribe to both.
 
 <b>Feeds & things</b>
-* We have an <a href="/feeds/icalendar">iCal feed of all Dorkbot London events</a>.
+* We have an <a href="/feeds/icalendar/">iCal feed of all Dorkbot London events</a>.
 * And here's a handy button to add it to your Google calendar: <a href="https://www.google.com/calendar/render?cid=vqc1cb7ikjq6k83t2drmle9rnh2dagbh%40import.calendar.google.com"><img src="https://www.google.com/calendar/images/calendar_plus_en_GB.gif"></a>
 </pre>
