Dorkbot 88 now has a date

--- a/_posts/2015-06-11-88.html
+++ b/_posts/2015-06-11-88.html
@@ -1,6 +1,8 @@
 ---
 layout: post
 number: 88
+start: 2015-06-11 19:00:00
+end: 2015-06-11 22:30:00
 tags:
 ---
 Dorkbotlondon #88 is currently in the planning stages. If you'd like to speak
