--- a/_posts/2015-06-11-88.html
+++ b/_posts/2015-06-11-88.html
@@ -3,9 +3,53 @@ layout: post
 number: 88
 start: 2015-06-11 19:00:00
 end: 2015-06-11 22:30:00
+where: limehouse_town_hall
 tags:
+    - Sarah Angliss
+    - David Mills
+    - Kasia Molga
+    - Adrian Goodwin
+    - William Trossell
+    - Stefan Dzisiewski-Smith
 ---
-Dorkbotlondon #88 is currently in the planning stages. If you'd like to speak
-you know <a href="http://dorkbot.org/mailman/listinfo/dorkbotlondon-blabber">where to get in touch</a>!
 
---The overdork committee
+Free entry, no registration required (+ limited refreshments, bring your own!)
+
+
+With speakers including - but not restricted to...
+
+==== Sarah Angliss - <a href="http://sarahangliss.com">sarahangliss.com</a> / <a href='https://twitter.com/Therematrix'>@Therematrix</a> ====
+
+A preview of new work with breath sensors that Sarah's been developing at the
+Pervasive Media Studio, Bristol. Funded by Arts Council England, it'll be part
+of a drop-in participative performance at Vivid Projects, Birmingham during this
+year's Supersonic Festival.
+
+A composer, multi-instrumentalist, roboticist and sound historian, Sarah's work
+explores her obsessions with defunct machinery, faded variety acts and European
+folklore.
+
+==== David Mills - <a href="http://apocalypto.org.uk">apocalypto.org.uk</a> / <a href='https://twitter.com/DTL'>@DTL</a> ====
+
+#xraymylunch, #xraystuffinmylab, and using high contrast X-ray microtomography
+(XMT) with advanced image processing algorithms to read fragile historic
+documents.
+
+==== Kasia Molga &amp; Adrian Goodwin - <a href="http://kasiamolga.net">kasiamolga.net</a> / <a href='https://twitter.com/olygamy'>@olygamy</a> ====
+
+World Wilder Lab is a collective set up by Kasia Molga, Erik Overmeire and Ivan
+Henriques. Together with Adrian Godwin we developed a device called PlanEt which
+allows us to hack into whispers of plants. Now we are trying to figure out what
+plants are saying...
+
+==== William Trossell - <a href="http://scanlabprojects.co.uk">scanlabprojects.co.uk</a> / <a href='https://twitter.com/ScanLABProjects'>@ScanLABProjects</a> ====
+
+ScanLAB is an ongoing series of projects investigating the use of 3D laser
+scanning in architecture, art and film, with subjects ranging from Arctic ice
+floes to Mount Pleasant subterranean Mail Rail station.
+
+==== Stefan Dzisiewski-Smith - <a href="http://bycgwtsf.com">bycgwtsf.com</a> / <a href='https://twitter.com/stefandz'>@stefandz</a> ====
+
+The weirdest things that people do with - and ask about - Bare Conductive's
+electrically conductive paint, plus the paint's more "unusual properties".
+
