--- a/speakers.html
+++ b/speakers.html
@@ -11,7 +11,7 @@ permalink: /speakers/
 
 {{ t }}
 <ul>
-{% for post in posts %}
+{% for post in posts reversed %}
   {% if post.tags contains t %}
   <li>
     <a href="{{ post.url }}">{{ post.title }}</a>
