Let's have some bold headlines

--- a/_posts/2015-06-11-88.html
+++ b/_posts/2015-06-11-88.html
@@ -18,7 +18,7 @@ Free entry, no registration required (+ limited refreshments, bring your own!)
 
 With speakers including - but not restricted to...
 
-==== Sarah Angliss - <a href="http://sarahangliss.com">sarahangliss.com</a> / <a href='https://twitter.com/Therematrix'>@Therematrix</a> ====
+<b>==== Sarah Angliss - <a href="http://sarahangliss.com">sarahangliss.com</a> / <a href='https://twitter.com/Therematrix'>@Therematrix</a> ====</b>
 
 A preview of new work with breath sensors that Sarah's been developing at the
 Pervasive Media Studio, Bristol. Funded by Arts Council England, it'll be part
@@ -29,26 +29,26 @@ A composer, multi-instrumentalist, roboticist and sound historian, Sarah's work
 explores her obsessions with defunct machinery, faded variety acts and European
 folklore.
 
-==== David Mills - <a href="http://apocalypto.org.uk">apocalypto.org.uk</a> / <a href='https://twitter.com/DTL'>@DTL</a> ====
+<b>==== David Mills - <a href="http://apocalypto.org.uk">apocalypto.org.uk</a> / <a href='https://twitter.com/DTL'>@DTL</a> ====</b>
 
 #xraymylunch, #xraystuffinmylab, and using high contrast X-ray microtomography
 (XMT) with advanced image processing algorithms to read fragile historic
 documents.
 
-==== Kasia Molga &amp; Adrian Goodwin - <a href="http://kasiamolga.net">kasiamolga.net</a> / <a href='https://twitter.com/olygamy'>@olygamy</a> ====
+<b>==== Kasia Molga &amp; Adrian Goodwin - <a href="http://kasiamolga.net">kasiamolga.net</a> / <a href='https://twitter.com/olygamy'>@olygamy</a> ====</b>
 
 World Wilder Lab is a collective set up by Kasia Molga, Erik Overmeire and Ivan
 Henriques. Together with Adrian Godwin we developed a device called PlanEt which
 allows us to hack into whispers of plants. Now we are trying to figure out what
 plants are saying...
 
-==== William Trossell - <a href="http://scanlabprojects.co.uk">scanlabprojects.co.uk</a> / <a href='https://twitter.com/ScanLABProjects'>@ScanLABProjects</a> ====
+<b>==== William Trossell - <a href="http://scanlabprojects.co.uk">scanlabprojects.co.uk</a> / <a href='https://twitter.com/ScanLABProjects'>@ScanLABProjects</a> ====</b>
 
 ScanLAB is an ongoing series of projects investigating the use of 3D laser
 scanning in architecture, art and film, with subjects ranging from Arctic ice
 floes to Mount Pleasant subterranean Mail Rail station.
 
-==== Stefan Dzisiewski-Smith - <a href="http://bycgwtsf.com">bycgwtsf.com</a> / <a href='https://twitter.com/stefandz'>@stefandz</a> ====
+<b>==== Stefan Dzisiewski-Smith - <a href="http://bycgwtsf.com">bycgwtsf.com</a> / <a href='https://twitter.com/stefandz'>@stefandz</a> ====</b>
 
 The weirdest things that people do with - and ask about - Bare Conductive's
 electrically conductive paint, plus the paint's more "unusual properties".
