--- a/_posts/2015-06-11-88.html
+++ b/_posts/2015-06-11-88.html
@@ -31,7 +31,7 @@ folklore.
 
 <b>==== David Mills - <a href="http://apocalypto.org.uk">apocalypto.org.uk</a> / <a href='https://twitter.com/DTL'>@DTL</a> ====</b>
 
-#xraymylunch, #xraystuffinmylab, and using high contrast X-ray microtomography
+<a href="https://twitter.com/search?q=%23xraymylunch&src=typd&vertical=default&f=tweets">#xraymylunch</a>, <a href="https://twitter.com/search?q=%23xraystuffinmylab&src=typd&vertical=default&f=tweets">#xraystuffinmylab<a/>, and using high contrast X-ray microtomography
 (XMT) with advanced image processing algorithms to read fragile historic
 documents.
 
