Correct(ish) meeting count, Twitter link.

--- a/about.html
+++ b/about.html
@@ -14,11 +14,15 @@ First there was <a href="http://dorkbot.org/dorkbotnyc/">dorkbotnyc</a>, a month
     broadest sense of the term.)"
 
 Some people realised that their home city of London was in dire need of such a
-meeting, and dorkbotlondon was born. We've had 81 meetings, all well attended
+meeting, and dorkbotlondon was born. We've had &gt;85 meetings, all well attended
 by some great people.
 
 If you're not in London, UK then why not see if there is a <a href="http://dorkbot.org">dorkbot near you</a>?
 They're springing up everywhere...
+
+<b>Social media</b>
+
+You can find us on Twitter as <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>.
 
 <b>Mailing lists</b>
 
