--- a/calendar.ics.html
+++ b/calendar.ics.html
@@ -8,10 +8,10 @@ X-WR-CALDESC:"Dorkbot London Events"
 X-WR-CALNAME:"Dorkbot London Events"
 {% for post in site.posts limit:10 %}{% if post.start %}
 BEGIN:VEVENT
-SUMMARY:"Dorkbot {{ post.title }}"
+SUMMARY:Dorkbot {{ post.title }}
 DTSTART;TZID=Europe/London;VALUE=DATE-TIME:{{ post.start | date: "%Y%m%dT%H%M00" }}
 DTEND;TZID=Europe/London;VALUE=DATE-TIME:{{ post.end | date: "%Y%m%dT%H%M00" }}
 UID:{{ post.date | date: "%Y%m%d" }}@dorkbotlondon.org
-LOCATION:"{{ site.data.locations.[post.where].where }}"
+LOCATION:{{ site.data.locations.[post.where].where }}
 END:VEVENT{% endif %}{% endfor %}
 END:VCALENDAR
