--- a/about.html
+++ b/about.html
@@ -26,9 +26,7 @@ You can find us on Twitter as <a href="https://twitter.com/dorkbotlondon">@dorkb
 
 <b>Mailing lists</b>
 
-We have an <a href="http://dorkbot.org/mailman/listinfo/dorkbotlondon-announce">announce list</a> for our monthly-ish announcements, and a <a href="http://dorkbot.org/mailman/listinfo/dorkbotlondon-blabber">blabber list</a>
-which is open for discussion. They both get the announcements so no need to
-subscribe to both.
+[updated Oct 2015] We should be bringing back the <a href="http://dorkbot.org/mailman/listinfo/dorkbotlondon-announce">announce list</a> for our monthly-ish announcements...
 
 <b>Feeds & things</b>
 * We have an <a href="/feeds/icalendar/">iCal feed of all Dorkbot London events</a>.
