New mailing list sign-up address, add email.

--- a/about.html
+++ b/about.html
@@ -26,9 +26,13 @@ You can find us on Twitter as <a href="https://twitter.com/dorkbotlondon">@dorkb
 
 <b>Mailing lists</b>
 
-[updated Oct 2015] We should be bringing back the <a href="http://dorkbot.org/mailman/listinfo/dorkbotlondon-announce">announce list</a> for our monthly-ish announcements...
+Sign up to our <a href="http://eepurl.com/bCbfhn">announce list</a> for monthly-ish updates on upcoming dorkbot events.
 
 <b>Feeds & things</b>
 * We have an <a href="/feeds/icalendar/">iCal feed of all Dorkbot London events</a>.
 * And here's a handy button to add it to your Google calendar: <a href="https://www.google.com/calendar/render?cid=vqc1cb7ikjq6k83t2drmle9rnh2dagbh%40import.calendar.google.com"><img src="https://www.google.com/calendar/images/calendar_plus_en_GB.gif"></a>
+
+<b>Contact us</b>
+You can get in touch via <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>.
+
 </pre>
