--- a/_posts/2015-12-11-90.html
+++ b/_posts/2015-12-11-90.html
@@ -9,88 +9,107 @@ tags:
     - Julie Freeman
     - Mike Harrison
     - Bob Sturm
+    - Di Mainstone
+    - Jack Armitage
+    - Sophie Skach
+    - Daniel Stoller
+    - Victor Loux
+    - Betül Aksu
 ---
 
-Free entry, no registration required - we have a license for this one so we'll be running a bar. 
-If you want to volunteer to help bar tend please email us - we need you! dorkbotlondon@gmail.com
-(NB the bar won't be selling much by way of food so please bring snacks/cake to eat/share!)
+Free entry, no registration required - we have a license for this one so we'll
+be running a bar. If you want to volunteer to help bar tend please email us - we
+need you! <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
 
-Don't forget you can "follow" <a href="https://twitter.com/DorkbotLondon">@DorkbotLondon on Twitter</a>, 
-and/or see who's coming <a href="https://www.facebook.com/events/445127949015483/">via the Facebook event</a>, 
-if that's your thing
+(NB the bar won't be selling much by way of food so please bring snacks/cake to
+eat/share!)
+
+Don't forget you can "follow" <a href='https://twitter.com/DorkbotLondon'>@DorkbotLondon</a> on Twitter, and/or see who's coming 
+via the <a href='https://www.facebook.com/events/445127949015483/'>Facebook event</a>, if that's your thing
 
 With speakers including - but not restricted to...
 
-<b>==== Rain Ashford ====</b>
-<b>"Designing, coding and building sensor-driven emotive wearables
-to amplify physiological data in social situations"</b>
-<a href="https://rainycatz.wordpress.com/">rainycatz.wordpress.com/</a>
-<a href="https://twitter.com/rainycat/">twitter.com/rainycat/</a>
-From her AnemoneStarHeart EEG / ECG visualising device to the
-ThinkerBelle EEG Amplifying Dress, Rain's doctoral research
-investigates how wearable technology could broadcast physiological
-data from the body to create new forms of non-verbal communication,
-and questions the personal, societal and cultural implications.
+<b>==== Rain Ashford (<a href="https://twitter.com/rainycat">@rainycat</a>) ====</b>
+<i>"Designing, coding and building sensor-driven emotive wearables
+to amplify physiological data in social situations"</i>
 
-<b>==== Bob Sturm ====</b>
-<b>“Eight short outputs …”</b>
-<a href="http://highnoongmt.wordpress.com">highnoongmt.wordpress.com</a>/
-<a href="https://twitter.com/boblsturm">twitter.com/boblsturm</a>
-Bob will play a compositional suite generated using a long short-term memory 
-network with three fully connected hidden layers of 512 units each, trained on 
-over 23,000 ABC transcriptions of session music (Irish, English, etc.), and 
-arranged by his own “personal” neural network trained on who knows what for 
-who knows how long (he can’t remember any of the settings) (2015). And he’ll
-attempt to explain a little about them too.
+From her AnemoneStarHeart EEG / ECG visualising device to the ThinkerBelle EEG
+Amplifying Dress, Rain's doctoral research investigates how wearable technology
+could broadcast physiological data from the body to create new forms of
+non-verbal communication, and questions the personal, societal and cultural
+implications.
 
-<b>==== Julie Freeman ====</b>
-<b>"Do Naked Mole Rats have data privacy rights?"</b>
-(NB no burrowing eusocial mammals were harmed during the course of this research)
-<a href="http://www.translatingnature.org/">translatingnature.org/</a>
-<a href="https://twitter.com/misslake">twitter.com/misslake</a>
+- <a href="http://rainycatz.wordpress.com/">rainycatz.wordpress.com/</a>
 
-<b>==== Mike Harrison ====</b>
-<b>"Christmas snow in Hong Kong"</b>
-<a href="http://www.electricstuff.co.uk/">www.electricstuff.co.uk/</a>
-<a href="https://twitter.com/mikelectricstuf">twitter.com/mikelectricstuf</a>
-Dorkbot regular Mike is a Freelance Electronics Engineer (and Youtuber), recently returned
-from installing a large-scale LED display in Hong Kong.
+<b>==== Bob Sturm (<a href="https://twitter.com/boblsturm">@boblsturm</a>) ====</b>
+<i>“Eight short outputs …”</i>
+
+Bob will play a compositional suite generated using a long short-term memory
+network with three fully connected hidden layers of 512 units each, trained on
+over 23,000 ABC transcriptions of session music (Irish, English, etc.), and
+arranged by his own “personal” neural network trained on who knows what for who
+knows how long (he can’t remember any of the settings) (2015). And he’ll attempt
+to explain a little about them too.
+
+- <a href="http://highnoongmt.wordpress.com/">highnoongmt.wordpress.com/</a>
+
+<b>==== Julie Freeman (<a href="https://twitter.com/misslake">@misslake</a>) ====</b>
+<i>"Do Naked Mole Rats have data privacy rights?"</i>
+
+(NB no burrowing eusocial mammals were harmed during the course of this
+research)
+
+- <a href="http://translatingnature.org/">translatingnature.org/</a>
+
+<b>==== Mike Harrison (<a href="https://twitter.com/mikeelectricstuf">@mikeelectricstuf</a>) ====</b>
+<i>"Christmas snow in Hong Kong"</i>
+
+Dorkbot regular Mike is a Freelance Electronics Engineer (and Youtuber),
+recently returned from installing a large-scale LED display in Hong Kong.
+
+- <a href="http://www.electricstuff.co.uk/">www.electricstuff.co.uk/</a>
 
 <b>==== Open dorks/demos: ====</b>
-<b>Jack Armitage</b>
-Stenophone: Chorded Keyboard as Live Coding Instrument
 
-<b><a href="https://twitter.com/SophieSkach">Sophie Skach</a></b>
-"12^4 boys": drawing + combining portraits by touching a doll's head
+<b>Jack Armitage</b>
+<i>Stenophone: Chorded Keyboard as Live Coding Instrument</i>
+
+<b>Sophie Skach (<a href="https://twitter.com/SophieSkach">@SophieSkach</a>)</b>
+<i>"12^4 boys": drawing + combining portraits by touching a doll's head</i>
 
 <b>Daniel Stoller</b>
-Snowfall: A skiing game controlled with your feet
+<i>Snowfall: A skiing game controlled with your feet</i>
 
-<b><a href="https://twitter.com/lgorithm">Victor Loux</a></b>
-Kids Photo Booth: photo booth effects controlled with a learning table
+<b>Victor Loux (<a href="https://twitter.com/lgorithm">@lgorithm</a>)</b>
+<i>Kids Photo Booth: photo booth effects controlled with a learning table</i>
 
-<b><a href="https://twitter.com/betulaksu">Betül Aksu</a></b>
-Hand Me Down: an interactive way of second-hand storytelling
-(...& perhaps you?)
+<b>Betül Aksu (<a href="https://twitter.com/betulaksu">@betulaksu</a>)</b>
+<i>Hand Me Down: an interactive way of second-hand storytelling</i>
+
+(...&amp; perhaps you?)
 
 <b>==== Plus Special Guest... Di Mainstone! ====</b>
 After speaking at our last event, Di discusses new plans for creating sound and
 music from any suitably resonant metal structures...
-<a href="http://dimainstone.com/">dimainstone.com/</a>
-<a href="https://twitter.com/dimainstone">twitter.com/dimainstone</a>
+
+- <a href="http://dimainstone.com/">dimainstone.com/</a>
+- <a href="http://twitter.com/dimainstone">twitter.com/dimainstone</a>
 
 <b>==== Sputnik Bauble Workshop and "competition" ====</b>
-Hosted by @Jonty & @prehensile, this essentially involves sticking four bits of wire
-to a shiny silver bauble in order to make a Sputnik-themed decoration for your festive
-celebrations. We will be providing baubles, wire and glue.
+Hosted by <a href='https://twitter.com/jonty'>@jonty</a> &amp; <a href='https://twitter.com/prehensile'>@prehensile</a>, this essentially involves sticking four bits
+of wire to a shiny silver bauble in order to make a 1/100 scale Sputnik-themed
+decoration for your festive celebrations. We will be providing baubles, wire
+and glue.
 
-Prizes may well be awarded* for the most overengineered bauble. If you feel inspired to
-go beyond the baseline Sputnik bauble, you've got a 55mm-diameter spherical volume to
-fill with whatever you see fit.
-*Prizes may well be more baubles. We've got a lot of baubles.
+Prizes may well be awarded* for the most overengineered bauble. If you feel
+inspired to go beyond the baseline Sputnik bauble, you've got a 55mm-diameter
+spherical volume to fill with whatever you see fit.
 
-<b>==== Youtube-powered DORK KARAOKE with @fakedavegreen ====</b>
+<small>* Prizes may well be more baubles. We've got a lot of baubles.</small>
+
+<b>==== Youtube-powered DORK KARAOKE with <a href='https://twitter.com/fakedavegreen'>@fakedavegreen</a> ====</b>
 The evening concludes with (non-compulsory) "Dork Karaoke" of songs we can find
 (or ideally download in advance) off of Youtube. Please post your requests via
-<a href="https://twitter.com/DorkbotLondon">Twitter</a> or <a href="https://www.facebook.com/events/445127949015483/">the Facebook event</a> - they don't have to be particularly dorky or Xmas-y,
-but ideally they should be short (<4-5min), fairly well-known, and not highly offensive. Cheers! 
+Twitter or the Facebook event - they don't have to be particularly dorky or
+Xmas-y, but ideally they should be short (<4-5min), fairly well-known, and not
+highly offensive. Cheers!
