Slightly more dork90 cleanup

--- a/_posts/2015-12-11-90.html
+++ b/_posts/2015-12-11-90.html
@@ -39,7 +39,7 @@ could broadcast physiological data from the body to create new forms of
 non-verbal communication, and questions the personal, societal and cultural
 implications.
 
-- <a href="http://rainycatz.wordpress.com/">rainycatz.wordpress.com/</a>
+- <a href="http://rainycatz.wordpress.com/">rainycatz.wordpress.com</a>
 
 <b>==== Bob Sturm (<a href="https://twitter.com/boblsturm">@boblsturm</a>) ====</b>
 <i>“Eight short outputs …”</i>
@@ -51,7 +51,7 @@ arranged by his own “personal” neural network trained on who knows what for 
 knows how long (he can’t remember any of the settings) (2015). And he’ll attempt
 to explain a little about them too.
 
-- <a href="http://highnoongmt.wordpress.com/">highnoongmt.wordpress.com/</a>
+- <a href="http://highnoongmt.wordpress.com/">highnoongmt.wordpress.com</a>
 
 <b>==== Julie Freeman (<a href="https://twitter.com/misslake">@misslake</a>) ====</b>
 <i>"Do Naked Mole Rats have data privacy rights?"</i>
@@ -59,7 +59,7 @@ to explain a little about them too.
 (NB no burrowing eusocial mammals were harmed during the course of this
 research)
 
-- <a href="http://translatingnature.org/">translatingnature.org/</a>
+- <a href="http://translatingnature.org/">translatingnature.org</a>
 
 <b>==== Mike Harrison (<a href="https://twitter.com/mikeelectricstuf">@mikeelectricstuf</a>) ====</b>
 <i>"Christmas snow in Hong Kong"</i>
@@ -67,7 +67,7 @@ research)
 Dorkbot regular Mike is a Freelance Electronics Engineer (and Youtuber),
 recently returned from installing a large-scale LED display in Hong Kong.
 
-- <a href="http://www.electricstuff.co.uk/">www.electricstuff.co.uk/</a>
+- <a href="http://www.electricstuff.co.uk/">www.electricstuff.co.uk</a>
 
 <b>==== Open dorks/demos: ====</b>
 
@@ -88,14 +88,13 @@ recently returned from installing a large-scale LED display in Hong Kong.
 
 (...&amp; perhaps you?)
 
-<b>==== Plus Special Guest... Di Mainstone! ====</b>
+<b>==== Plus Special Guest... Di Mainstone! (<a href="http://twitter.com/dimainstone">@dimainstone</a>) ====</b>
 After speaking at our last event, Di discusses new plans for creating sound and
 music from any suitably resonant metal structures...
 
-- <a href="http://dimainstone.com/">dimainstone.com/</a>
-- <a href="http://twitter.com/dimainstone">twitter.com/dimainstone</a>
+- <a href="http://dimainstone.com/">dimainstone.com</a>
 
-<b>==== Sputnik Bauble Workshop and "competition" ====</b>
+<b>==== Sputnik Bauble Workshop and "Competition" ====</b>
 Hosted by <a href='https://twitter.com/jonty'>@jonty</a> &amp; <a href='https://twitter.com/prehensile'>@prehensile</a>, this essentially involves sticking four bits
 of wire to a shiny silver bauble in order to make a 1/100 scale Sputnik-themed
 decoration for your festive celebrations. We will be providing baubles, wire
