Order of magnitude--

--- a/_posts/2015-12-11-90.html
+++ b/_posts/2015-12-11-90.html
@@ -96,7 +96,7 @@ music from any suitably resonant metal structures...
 
 <b>==== Sputnik Bauble Workshop and "Competition" ====</b>
 Hosted by <a href='https://twitter.com/jonty'>@jonty</a> &amp; <a href='https://twitter.com/prehensile'>@prehensile</a>, this essentially involves sticking four bits
-of wire to a shiny silver bauble in order to make a 1/100 scale Sputnik-themed
+of wire to a shiny silver bauble in order to make a 1/10th scale Sputnik-themed
 decoration for your festive celebrations. We will be providing baubles, wire
 and glue.
 
