remove dad-like quotes from "follow"

--- a/_posts/2016-02-15-91.html
+++ b/_posts/2016-02-15-91.html
@@ -15,7 +15,7 @@ tags:
 Free entry, no registration required + limited refreshments, bring your own!
 Talks start 7.30pm, doors open from 6.45pm...
 
-Don't forget you can "follow" <a href='https://twitter.com/DorkbotLondon'>https://twitter.com/DorkbotLondon</a> on Twitter, and/or see who's coming 
+Don't forget you can follow <a href='https://twitter.com/DorkbotLondon'>https://twitter.com/DorkbotLondon</a> on Twitter, and/or see who's coming 
 via the Facebook event <a href='https://www.facebook.com/events/220646841609348/'>https://www.facebook.com/events/220646841609348/</a>, if that's your thing
 
 
