added link to facebook group

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ First there was <a href="http://dorkbot.org/dorkbotnyc/">dorkbotnyc</a>, a month
     broadest sense of the term.)"
 
 Some people realised that their home city of London was in dire need of such a
-meeting, and dorkbotlondon was born. We've had &gt;85 meetings, all well attended
+meeting, and dorkbotlondon was born. We've had &gt;90+ meetings, all well attended
 by some great people.
 
 If you're not in London, UK then why not see if there is a <a href="http://dorkbot.org">dorkbot near you</a>?
@@ -23,6 +23,8 @@ They're springing up everywhere...
 <b>Social media</b>
 
 You can find us on Twitter as <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>.
+
+Or join the <a href="https://www.facebook.com/groups/1494354627526302/">Facebook group here</a>.
 
 <b>Mailing lists</b>
 
