--- a/credits.html
+++ b/credits.html
@@ -1,19 +1,19 @@
 ---
 layout: page
-title: Dorkbot London on-screen info
+title: Dorkbot London Event Info
 permalink: /credits/
 ---
 <pre>
-<h2>Further Info
+<h1>Twitter:
+<a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
 
-Twitter: <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
-
-Email: <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
+Email:
+<a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
 
 Or join the <a href="https://www.facebook.com/groups/1494354627526302/">Facebook group here</a>.
 
 Sign up to our <a href="http://eepurl.com/bCbfhn">announce list</a> for monthly-ish updates on upcoming dorkbot events.
 
 
-</h2>
+</h1>
 </pre>
