--- a/credits.html
+++ b/credits.html
@@ -3,10 +3,10 @@ layout: page
 title: Dorkbot London Event Info
 permalink: /credits/
 ---
-<pre>
-<h1>Twitter: <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
+<pre><h1>
+Twitter: <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
 
-Email:       <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
+Email:   <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
 
 Or join the <a href="https://www.facebook.com/groups/1494354627526302/">Facebook group here</a>.
 
