--- a/credits.html
+++ b/credits.html
@@ -4,14 +4,13 @@ title: Dorkbot London Event Info
 permalink: /credits/
 ---
 <pre><h1>
-Twitter: <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
+Twitter:      <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
 
-Email:   <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
+Facebook:     <a href="https://www.facebook.com/groups/1494354627526302/">http://bit.do/dorkbotlondonfb</a>.
 
-Or join the <a href="https://www.facebook.com/groups/1494354627526302/">Facebook group here</a>.
+Mailing list: <a href="http://eepurl.com/bCbfhn">http://eepurl.com/bCbfhn</a> (low traffic)
 
-Sign up to our <a href="http://eepurl.com/bCbfhn">announce list</a> for monthly-ish updates on upcoming dorkbot events.
-
+Email:        <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
 
 </h1>
 </pre>
