--- a/credits.html
+++ b/credits.html
@@ -11,6 +11,11 @@ Facebook:     <a href="https://www.facebook.com/groups/1494354627526302/">http:/
 Mailing list: <a href="http://eepurl.com/bCbfhn">http://eepurl.com/bCbfhn</a> (low traffic)
 
 Email:        <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
-
 </h1>
+Approx schedule:
+19:30 Speaker      20:00 Speaker   20:20 "OpenDork"?
+20:30 BREAK
+20:50 "OpenDork"?  21:00 Speaker   21:30 Speaker
+22:00 TALK AMONG YOURSELVES...
+
 </pre>
