--- a/credits.html
+++ b/credits.html
@@ -3,10 +3,9 @@ layout: page
 title: Dorkbot London Event Info
 permalink: /credits/
 ---
-<pre><h1>
-Twitter:      <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
+<pre><h1>Twitter:      <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
 
-Facebook:     <a href="https://www.facebook.com/groups/1494354627526302/">http://bit.do/dorkbotlondonfb</a>.
+Facebook:     <a href="https://www.facebook.com/groups/1494354627526302/">http://bit.do/dorkbotlondonfb</a>
 
 Mailing list: <a href="http://eepurl.com/bCbfhn">http://eepurl.com/bCbfhn</a> (low traffic)
 
@@ -18,4 +17,8 @@ Approx schedule:
 20:50 "OpenDork"?  21:00 Speaker   21:30 Speaker
 22:00 TALK AMONG YOURSELVES...
 
+Feb 2016 organised by:
+Talks curated:   Evan Raskob, Sarah Wiseman
+Venue & AV:      Sarah Angliss, Sam Valiant, Peter Brownell
+Extra help:      [everyone else]
 </pre>
