--- a/credits.html
+++ b/credits.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Dorkbot London Event Info
+title: Dorkbot London On-screen Info
 permalink: /credits/
 ---
 <pre><h1>Twitter:      <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
