--- a/credits.html
+++ b/credits.html
@@ -15,10 +15,10 @@ Approx schedule:
 19:30 Speaker      20:00 Speaker   20:20 "OpenDork"?
 20:30 BREAK
 20:50 "OpenDork"?  21:00 Speaker   21:30 Speaker
-22:00 TALK AMONG YOURSELVES...
+22:00 TALK AMONGST YOURSELVES...
 
 Feb 2016 organised by:
 Talks curated:   Evan Raskob, Sarah Wiseman
-Venue & AV:      Sarah Angliss, Sam Valiant, Peter Brownell
+Venue &amp; A/V:    Sarah Angliss, Sam Valiant, Peter Brownell
 Extra help:      [everyone else]
 </pre>
