--- a/credits.html
+++ b/credits.html
@@ -19,6 +19,6 @@ Approx schedule:
 
 Feb 2016 organised by:
 Talks curated:   Evan Raskob, Sarah Wiseman
-Venue &amp; A/V:    Sarah Angliss, Sam Valiant, Peter Brownell
+Venue &amp; AV:      Sarah Angliss, Sam Valiant, Peter Brownell
 Extra help:      [everyone else]
 </pre>
