--- a/credits.html
+++ b/credits.html
@@ -3,7 +3,9 @@ layout: page
 title: Dorkbot London On-screen Info
 permalink: /credits/
 ---
-<pre><h1>Twitter:      <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
+<pre><h1>Website:      <a href="http://dorkbotlondon.org">http://dorkbotlondon.org</a>
+
+Twitter:      <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
 
 Facebook:     <a href="https://www.facebook.com/groups/1494354627526302/">http://bit.do/dorkbotlondonfb</a>
 
