--- a/credits.html
+++ b/credits.html
@@ -19,7 +19,7 @@ Approx schedule:
 20:50 "OpenDork"?  21:00 Speaker   21:30 Speaker
 22:00 TALK AMONGST YOURSELVES...
 
-<b></b>Feb 2016 organised by:
+<b>Feb 2016 organised by:
 Talks curated:   Evan Raskob, Sarah Wiseman
 Venue &amp; AV:      Sarah Angliss, Sam Valiant, Peter Brownell
 Extra help:      [everyone else]
