--- a/credits.html
+++ b/credits.html
@@ -13,13 +13,13 @@ Mailing list: <a href="http://eepurl.com/bCbfhn">http://eepurl.com/bCbfhn</a> (l
 
 Email:        <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
 </h1>
-Approx schedule:
+<b>Approx schedule:
 19:30 Speaker      20:00 Speaker   20:20 "OpenDork"?
 20:30 BREAK
 20:50 "OpenDork"?  21:00 Speaker   21:30 Speaker
 22:00 TALK AMONGST YOURSELVES...
 
-<b>Feb 2016 organised by:
+Feb 2016 organised by:
 Talks curated:   Evan Raskob, Sarah Wiseman
 Venue &amp; AV:      Sarah Angliss, Sam Valiant, Peter Brownell
 Extra help:      [everyone else]
