fixup the flickr image links (rm archive.org prefixes)

--- a/_posts/2008-12-11-dorkmas-2008.html
+++ b/_posts/2008-12-11-dorkmas-2008.html
@@ -53,5 +53,5 @@ Featuring the lurking and sleazy...
 
 
 <h2>Photos</h2>
-<a href="http://www.flickr.com/photos/12623032@N08/3104139795"><img border="0" alt="" src="/web/20130128134448im_/http://farm4.static.flickr.com/3174/3104139795_57b3f64531_s.jpg" /></a><br />
+<a href="http://www.flickr.com/photos/12623032@N08/3104139795"><img border="0" alt="" src="http://farm4.static.flickr.com/3174/3104139795_57b3f64531_s.jpg" /></a><br />
 
