--- a/_posts/2010-08-18-70.html
+++ b/_posts/2010-08-18-70.html
@@ -34,5 +34,5 @@ Featuring the spicy and aromatic...
 
 
 <h2>Photos</h2>
-<a href="http://www.flickr.com/photos/58447660@N00/4905337448"><img border="0" alt="Aesthetics of Disgust" src="/web/20130207060202im_/http://farm5.static.flickr.com/4119/4905337448_9d7ccd9664_s.jpg" /></a><br />
+<a href="http://www.flickr.com/photos/58447660@N00/4905337448"><img border="0" alt="Aesthetics of Disgust" src="http://farm5.static.flickr.com/4119/4905337448_9d7ccd9664_s.jpg" /></a><br />
 
