--- a/credits.html
+++ b/credits.html
@@ -17,11 +17,11 @@ Email:        <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</
 19:30 Speaker      20:00 Speaker   20:20 "OpenDork"?
 20:30 BREAK
 20:50 "OpenDork"?  21:00 Speaker   21:30 Speaker
-22:00 TALK AMONGST YOURSELVES...
+22:00 DORK AMONGST YOURSELVES...
 
 Feb 2016 organised by:
 Talks curated:   Evan Raskob, Sarah Wiseman
-Venue &amp; AV:      Sarah Angliss, Sam Valiant, Peter Brownell
+AV &amp; Venue:      Sam Valiant, Sarah Angliss, Peter Brownell
 Extra help:      [everyone else]
 </b>
 </pre>
