--- a/credits.html
+++ b/credits.html
@@ -22,6 +22,7 @@ Email:        <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</
 Feb 2016 organised by:
 Talks curated:   Evan Raskob, Sarah Wiseman
 AV &amp; Venue:      Sam Valiant, Sarah Angliss, Peter Brownell
-Extra help:      [everyone else]
+Comms / Web :     Dave Green, Gordon Joly, Dan Stowell, Oli Evans, Jonty Wareing
+Extra help:      Henry Cooke, Molly Fletcher
 </b>
 </pre>
