--- a/credits.html
+++ b/credits.html
@@ -21,8 +21,8 @@ Email:        <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</
 
 Feb 2016 organised by:
 Talks curated:   Evan Raskob, Sarah Wiseman
-AV &amp; Venue:      Sam Valiant, Sarah Angliss, Peter Brownell
-Comms / Web :     Dave Green, Gordon Joly, Dan Stowell, Oli Evans, Jonty Wareing
+AV &amp; venue:      Sam Valiant, Sarah Angliss, Peter Brownell
+Comms /web:      Dave Green, Gordon Joly, Dan Stowell, Oli Evans, Jonty Wareing
 Extra help:      Henry Cooke, Molly Fletcher
 </b>
 </pre>
