add missing speaker tags to 33--49 import

--- a/_posts/2006-01-18-33.html
+++ b/_posts/2006-01-18-33.html
@@ -5,6 +5,11 @@ start: 2006-01-18 19:00
 end:   2006-01-18 23:00
 where: limehouse_town_hall
 tags:
+ - Yoshi Imamura
+ - Dominic Harris
+ - Strange Attractor vs. Disinformation
+ - Tom Carden
+ - Alex Mclean
 ---
 
 Featuring the light and airy...
