--- a/_posts/2006-02-11-34.html
+++ b/_posts/2006-02-11-34.html
@@ -5,6 +5,14 @@ start: 2006-02-11 19:00
 end:   2006-02-11 23:00
 where: state51
 tags:
+ - Anton
+ - Cefn Hoile
+ - Dave Chatting
+ - Wojciech Kosma
+ - Tom Carden
+ - Saul Albert
+ - Simon Green
+ - Dave Griffiths
 ---
 
 
