--- a/_posts/2006-03-18-35.html
+++ b/_posts/2006-03-18-35.html
@@ -5,6 +5,17 @@ start: 2006
 end:   2006
 where: limehouse_town_hall
 tags:
+ - Mike Harrison
+ - Invited Cinema
+ - Javier Candeira
+ - James Larson
+ - Chun and Oli
+ - Alex Mclean
+ - Dave Griffith
+ - Slackers Salon
+ - Yoshi Imamura
+ - Mileece
+ - Anab Jain
 ---
 
 
