--- a/_posts/2006-09-27-41.html
+++ b/_posts/2006-09-27-41.html
@@ -5,6 +5,9 @@ start: 2006-09-27 19:00
 end:   2006-09-27 23:00
 where: limehouse_town_hall
 tags:
+ - Joerg Baach
+ - Evan Raskob
+ - Rodolfo Rosini
 ---
 
 Featuring the wise and flavoursome...
