--- a/_posts/2006-12-16-xmasspecial.html
+++ b/_posts/2006-12-16-xmasspecial.html
@@ -5,6 +5,10 @@ start: 2006-12-16 19:00
 end:   2006-12-16 23:00
 where: limehouse_town_hall
 tags:
+ - Amanda Windle
+ - James Larson
+ - Mike Harrison
+ - Tim Hunkin
 ---
 
 
