--- a/_posts/2007-03-21-46.html
+++ b/_posts/2007-03-21-46.html
@@ -5,6 +5,11 @@ start: 2007-03-21 19:00
 end:   2007-03-21 22:00
 where: state51
 tags:
+ - Alex McLean
+ - Platoniq
+ - Sarah Angliss
+ - Mike Harrison
+ - Jason Bruges Studio
 ---
 
 
