--- a/_posts/2007-04-18-47.html
+++ b/_posts/2007-04-18-47.html
@@ -5,6 +5,12 @@ start: 2007-04-18 19:00
 end:   2007-04-18 21:00
 where: limehouse_town_hall
 tags:
+ - The People Speak
+ - Sunshine Frere
+ - Jenny Pickett
+ - C6
+ - Pete Mühlenkamp
+ - Annie Spinster
 ---
 
 Featuring the valiant and reliable...
