--- a/_posts/2007-05-30-48.html
+++ b/_posts/2007-05-30-48.html
@@ -5,6 +5,9 @@ start: 2007-05-30 19:00
 end:   2007-05-30 21:00
 where: richmix
 tags:
+ - Der_T
+ - Mike Harrison
+ - Tav
 ---
 
 Featuring the innocent and blameless...
