--- a/_posts/2007-06-21-49.html
+++ b/_posts/2007-06-21-49.html
@@ -5,18 +5,11 @@ start: 2007-06-21 19:00
 end:   2006-06-21 22:00
 where: state51
 tags:
+ - Yoshi Imamura
+ - Steven Ounanian
+ - Joe Banks
+ - Chris Hand
 ---
-
-
-<h2>dorkbotlondon #49</h2>
-
-<dl>
-<dt>When:</dt><dd>19:00, 20 - 22:00, 21 June 2007</dd>
-<dt>Where:</dt><dd>state51</dd>
-</dl>
-
-
-
 
 
 Featuring the fresh and flumpy...
