--- a/_posts/2006-04-19-36.html
+++ b/_posts/2006-04-19-36.html
@@ -5,6 +5,11 @@ start: 2006-04-19 19:00
 end:   2006-04-19 23:00
 where: state51
 tags:
+ - Pedro Peregrino
+ - Mike Harrisson
+ - Patrick Tresset
+ - Michela Ledwidge
+ - Eleanor Dare
 ---
 
 Featuring the light and airy...
