--- a/_posts/2006-05-24-37.html
+++ b/_posts/2006-05-24-37.html
@@ -5,6 +5,10 @@ start: 2006-05-24 19:00
 end:   2006-05-24 23:00
 where: space_studios
 tags:
+ - Steve Allen
+ - Amy Alexander
+ - Wojciech Kosma
+ - The People Speak
 ---
 
 Featuring the tempestuous and passionate...
