--- a/_posts/2006-07-26-39.html
+++ b/_posts/2006-07-26-39.html
@@ -5,6 +5,10 @@ start: 2006-07-26 19:00
 end:   2006-07-26 23:00
 where: state51
 tags:
+ - Ian Sharpe
+ - Lektrolab
+ - Tom Schouten
+ - Tim Blackwell
 ---
 
 
