--- a/_posts/2006-09-04-dorkcamp.html
+++ b/_posts/2006-09-04-dorkcamp.html
@@ -5,6 +5,13 @@ start: 2006-09-01 19:00
 end:   2006-09-04 23:00
 where: dorking
 tags:
+ - Chun Lee
+ - Matthew Yee-King
+ - Curiosity Colliective
+ - Aneeta
+ - Paul Webb
+ - Inna Costantini
+ - Ben Goldacre
 ---
 
 Featuring the light and airy...
