--- a/_posts/2006-11-15-42.html
+++ b/_posts/2006-11-15-42.html
@@ -5,6 +5,10 @@ start: 2006-11-15 19:00
 end:   2006-11-15 23:00
 where: state51
 tags:
+ - Claudius Maxiumus
+ - Nik Ramage
+ - Nick Collins
+ - Iain Sharp
 ---
 
 
