--- a/_posts/2007-01-17-44.html
+++ b/_posts/2007-01-17-44.html
@@ -5,6 +5,11 @@ start: 2007-01-17 19:00
 end:   2007-01-17 22:00
 where: state51
 tags:
+ - Alex McLean
+ - Yoshi Imamura
+ - Alan Sutcliffe
+ - Paul Webb
+ - Sampath Jagannathan
 ---
 
 
