--- a/_posts/2007-02-21-45.html
+++ b/_posts/2007-02-21-45.html
@@ -5,6 +5,9 @@ start: 2007-02-21 19:00
 end:   2007-02-21 21:00
 where: limehouse_town_hall
 tags:
+ - Ollie Bown
+ - Adnan Hadzi
+ - Ian Morrison
 ---
 
 
