--- a/credits.html
+++ b/credits.html
@@ -23,6 +23,6 @@ Feb 2016 organised by:
 Talks curated:   Evan Raskob, Sarah Wiseman
 AV &amp; venue:      Sam Valiant, Sarah Angliss, Peter Brownell
 Comms +web:      Dave Green, Dan Stowell, Gordon Joly, Oli Evans, Jonty Wareing
-Extra help:      Henry Cooke, Molly Fletcher, Jo Brodie, Rain Ashford
+Extra help:      Julie Freeman, Henry Cooke, Molly Fletcher, Jo Brodie, Rain Ashford
 </b>
 </pre>
