--- a/credits.html
+++ b/credits.html
@@ -3,13 +3,13 @@ layout: page
 title: Dorkbot London On-screen Info
 permalink: /credits/
 ---
-<pre><h1>Website:      <a href="http://dorkbotlondon.org">http://dorkbotlondon.org</a>
+<pre><h1>Website:      <a href="http://dorkbotlondon.org">dorkbotlondon.org</a>
 
 Twitter:      <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
 
-Facebook:     <a href="https://www.facebook.com/groups/1494354627526302/">http://bit.do/dorkbotlondonfb</a>
+Facebook:     <a href="https://www.facebook.com/groups/1494354627526302/">bit.do/dorkbotlondonfb</a>
 
-Mailing list: <a href="http://eepurl.com/bCbfhn">http://eepurl.com/bCbfhn</a> (low traffic)
+Mailing list: <a href="http://eepurl.com/bCbfhn">eepurl.com/bCbfhn</a> (low traffic)
 
 Email:        <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
 </h1>
