--- a/credits.html
+++ b/credits.html
@@ -12,6 +12,9 @@ Facebook:     <a href="https://www.facebook.com/groups/1494354627526302/">bit.do
 Mailing list: <a href="http://eepurl.com/bCbfhn">eepurl.com/bCbfhn</a> (low traffic)
 
 Email:        <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
+
+iCal feed:    <a href="http://dorkbotlondon.org/feeds/icalendar/">dorkbotlondon.org/feeds/icalendar/</a>
+
 </h1>
 <b>Approx schedule:
 19:30 Speaker      20:00 Speaker   20:20 "OpenDork"?
