--- a/credits.html
+++ b/credits.html
@@ -13,9 +13,7 @@ Mailing list: <a href="http://eepurl.com/bCbfhn">eepurl.com/bCbfhn</a> (low traf
 
 Email:        <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
 
-iCal feed:    <a href="http://dorkbotlondon.org/feeds/icalendar/">dorkbotlondon.org/feeds/icalendar/</a></h2>
-
-<b>Approx schedule:
+iCal feed:    <a href="http://dorkbotlondon.org/feeds/icalendar/">dorkbotlondon.org/feeds/icalendar/</a></h2><b>Approx schedule:
 19:30 Speaker      20:00 Speaker   20:20 "OpenDork"?
 20:30 BREAK
 20:50 "OpenDork"?  21:00 Speaker   21:30 Speaker
