--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About Dorkbot London
 permalink: /about/
 ---
 <pre>
-First there was <a href="http://dorkbot.org/dorkbotnyc/">dorkbotnyc</a>, a monthly meeting of electronic artists in new york:
+First there was <a href="http://dorkbot.org/dorkbotnyc/about.shtml">dorkbotnyc</a>, a monthly meeting of electronic artists in new york:
 </pre>
 
 <pre>
