--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ First there was <a href="http://dorkbot.org/dorkbotnyc/about.shtml">dorkbotnyc</
     broadest sense of the term.)"
 
 Some people realised that their home city of London was in dire need of such a
-meeting, and dorkbotlondon was born. We've had &gt;90+ meetings, all well attended
+meeting, and dorkbotlondon was born. We've had 90+ meetings, all well attended
 by some great people.
 
 If you're not in London, UK then why not see if there is a <a href="http://dorkbot.org">dorkbot near you</a>?
