--- a/credits.html
+++ b/credits.html
@@ -19,10 +19,10 @@ iCal feed:    <a href="http://dorkbotlondon.org/feeds/icalendar/">dorkbotlondon.
 20:50 "OpenDork"?  21:00 Speaker   21:30 Speaker
 22:00 DORK AMONGST YOURSELVES...
 
-Feb 2016 organised by:
-Talks curated:   Evan Raskob, Sarah Wiseman
+Organised by...
+Talks curated:   Sarah Wiseman, Dan Stowell, Julie Freeman
 AV &amp; venue:      Sam Valiant, Sarah Angliss, Peter Brownell
-Comms +web:      Dave Green, Dan Stowell, Gordon Joly, Oli Evans, Jonty Wareing
+Comms +web:      Dave Green, Gordon Joly, Oli Evans, Jonty Wareing
 Extra help:      Henry Cooke, Molly Fletcher, Jo Brodie, Rain Ashford
 </b>
 </pre>
