--- a/credits.html
+++ b/credits.html
@@ -21,7 +21,7 @@ iCal feed:    <a href="http://dorkbotlondon.org/feeds/icalendar/">dorkbotlondon.
 
 Organised by...
 Talks curated:   Sarah Wiseman, Dan Stowell, Julie Freeman
-AV &amp; venue:      Sam Valiant, Sarah Angliss, Peter Brownell
+AV &amp; venue:      Sam Valiant, Peter Brownell, Sarah Angliss
 Comms +web:      Dave Green, Gordon Joly, Oli Evans, Jonty Wareing
 Extra help:      Henry Cooke, Molly Fletcher, Jo Brodie, Rain Ashford
 </b>
