--- a/credits.html
+++ b/credits.html
@@ -23,6 +23,6 @@ Organised by...
 Talks curated:   Sarah Wiseman, Dan Stowell, Julie Freeman
 AV &amp; venue:      Sam Valiant, Peter Brownell, Sarah Angliss
 Comms +web:      Dave Green, Gordon Joly, Oli Evans, Jonty Wareing
-Extra help:      Henry Cooke, Molly Fletcher, Jo Brodie, Rain Ashford
+Extra help:      Henry Cooke, Jo Brodie
 </b>
 </pre>
