--- a/credits.html
+++ b/credits.html
@@ -7,7 +7,7 @@ permalink: /credits/
 
 Twitter:      <a href="https://twitter.com/dorkbotlondon">@dorkbotlondon</a>
 
-Facebook:     <a href="https://www.facebook.com/groups/1494354627526302/">bit.do/dorkbotlondonfb</a>
+Facebook:     <a href="https://www.facebook.com/groups/dorkbotlondon/">https://www.facebook.com/groups/dorkbotlondon/</a>
 
 Mailing list: <a href="http://eepurl.com/bCbfhn">eepurl.com/bCbfhn</a> (low traffic)
 
