--- a/world.html
+++ b/world.html
@@ -6,7 +6,7 @@ permalink: /credits/
 
 <h1>UK</h1>
 
-<div><a class="twitter-timeline" href="https://twitter.com/Dorkbotlondon" data-tweet-limit="1" data-width="520" data-height="400">Tweets by @Dorkbotlondon</a></div>
+<a class="twitter-timeline" href="https://twitter.com/DorkbotLondon?ref_src=twsrc%5Etfw">Tweets by DorkbotLondon</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
 
