--- a/world.html
+++ b/world.html
@@ -6,7 +6,7 @@ permalink: /credits/
 
 <h1>UK</h1>
 
-<a class="twitter-timeline" href="https://twitter.com/DorkbotLondon?ref_src=twsrc%5Etfw">Tweets by DorkbotLondon</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/DorkbotLondon?ref_src=twsrc%5Etfw">Tweets by DorkbotLondon</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
 
