--- a/world.html
+++ b/world.html
@@ -6,7 +6,14 @@ permalink: /credits/
 
 <h1>UK</h1>
 
-  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/DorkbotLondon?ref_src=twsrc%5Etfw">Tweets by DorkbotLondon</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/DorkbotLondon?ref_src=twsrc%5Etfw">London</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotsheff?ref_src=twsrc%5Etfw">Sheffield</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotcam?ref_src=twsrc%5Etfw">Cambridge</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/Dorkbot_Col?ref_src=twsrc%5Etfw">Colchester</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotanglia?ref_src=twsrc%5Etfw">East Anglia</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotbristol?ref_src=twsrc%5Etfw">Bristol</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
